--- a/elderly_bench.html
+++ b/elderly_bench.html
@@ -74,6 +74,9 @@
             <li class="nav-item">
               <a class="nav-link" href="robotic_arm.html">Robotic Arm</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="game.html">"WaterFun" Video Game</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -120,8 +123,6 @@
               Home view of the bench design. Screenshot taken from Autodesk
               Inventor.
             </p>
-          </div>
-          <div class="gallery-item">
             <img
               src="images/elderly bench news.png"
               alt="Side view of the spring powered cannon"
@@ -131,6 +132,18 @@
               Presented our Elderly Bench project on TDM, Macau's regional news
               broadcaster, to raise awareness about the need for better care and
               accessibility for seniors.
+            </p>
+          </div>
+          <div class="gallery-item">
+            <img
+              src="images/talking to elderly.jpg"
+              alt="Side view of the spring powered cannon"
+              class="gallery-image"
+            />
+            <p class="gallery-caption">
+              Interviewed elderlies at the park, asking them about the quality
+              of their life, the struggles they experience, and their view on
+              incorportating new technology to their daily lives.
             </p>
           </div>
         </div>
@@ -149,3 +162,4 @@
     ></script>
   </body>
 </html>
+
