--- a/3D_printed_shoe.html
+++ b/3D_printed_shoe.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+       <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a href="index.html" class="navbar-brand">
           <img
@@ -67,6 +67,11 @@
             <li class="nav-item">
               <a class="nav-link" href="auto_spring_powered_cannon.html"
                 >Automatic Spring Powered Cannon</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="game.html"
+                >"WaterFun" Video Game</a
               >
             </li>
             <li class="nav-item">
@@ -182,4 +187,5 @@
     ></script>
   </body>
 </html>
+
 
