--- a/auto_spring_powered_cannon.html
+++ b/auto_spring_powered_cannon.html
@@ -70,6 +70,11 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="game.html"
+                >"WaterFun" Video Game</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="robotic_arm.html">Robotic Arm</a>
             </li>
           </ul>
@@ -188,3 +193,4 @@
     ></script>
   </body>
 </html>
+
