--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="game.html"
+                >"WaterFun" Video Game</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="robotic_arm.html">Robotic Arm</a>
             </li>
           </ul>
@@ -103,3 +108,4 @@
     ></script>
   </body>
 </html>
+
