--- a/robotic_arm.html
+++ b/robotic_arm.html
@@ -70,6 +70,11 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="game.html"
+                >"WaterFun" Video Game</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link active" href="robotic_arm.html">Robotic Arm</a>
             </li>
           </ul>
@@ -128,3 +133,4 @@
     ></script>
   </body>
 </html>
+
