--- a/game.html
+++ b/game.html
@@ -95,7 +95,7 @@
             Blender, with the character Jones sourced from Mixamo. As the
             Programming Team Lead, I oversaw the project from concept to
             completion, coordinating coding in GDScript, asset integration, and
-            testing to deliver a fun, aquatic-themed game that promotes teamwork
+            testing to deliver a fun game that incorporates teamwork
             and creativity.
           </p>
         </div>
@@ -175,3 +175,4 @@
     ></script>
   </body>
 </html>
+
